<resources>
    <string name="app_name">FoodMarket</string>
    <string name="app_name_subtitle">Let\'s get some foods</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="hint_email">Type your email address</string>
    <string name="hint_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create New Account</string>
    <string name="hint_name">Type your full name</string>
    <string name="full_name">Full Name</string>
    <string name="text_continue">Continue</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="hint_phone">Type your phone number</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="hint_address">Type your address</string>
    <string name="house_no">House No.</string>
    <string name="hint_house">Type your house number</string>
    <string name="hint_city">Type your city</string>
    <string name="sign_in_subtitle">Find your best ever meal</string>
    <string name="sign_up_subtitle">Register and eat</string>
    <string name="sign_up_address_subtitle">Make sure it’s valid</string>
    <string name="dashboard">Dashboard</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="sign_up_success_subtitle">Now you are able to order\nsome foods as a self-reward</string>
    <string name="sign_up_success_title">Yeay! Completed</string>
    <string name="find_foods">Find Foods</string>
    <string name="city">City</string>
    <string name="recommended">Recommended</string>
    <string name="new_taste">New Taste</string>
    <string name="popular">Popular</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home_address">Home Address</string>
    <string name="security">Security</string>
    <string name="payments">Payments</string>
    <string name="payment_title">Payment</string>
    <string name="payment_subtitle">You deserved better meal</string>
    <string name="rate_app">Rate App</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="order_empty_title">Ouch! Hungry</string>
    <string name="order_empty_subtitle">Seems like you have not\nordered any food yet</string>
    <string name="orders_subtitle">Wait for the best meal</string>
    <string name="orders_title">Your Orders</string>
    <string name="total_price">Total Price:</string>
    <string name="total_price_label">Total Price</string>
    <string name="order_now">Order Now</string>
    <string name="ingredients">Ingredients: </string>
    <string name="order_success_sub_title">Just stay at home while we are\npreparing your best foods</string>
    <string name="success_order_title">You’ve Made Order</string>
    <string name="order_other_foods">Order Other Foods</string>
    <string name="view_my_order">View My Order</string>
    <string name="default_total">1</string>
    <string name="default_price">0</string>
    <string name="action_ok">OK</string>
    <string name="alert_title_exit">Exit</string>
    <string name="alert_desc_exit">Are you sure you want to\nleave this page?</string>
    <string name="alert_desc_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="item_ordered">Item Ordered</string>
    <string name="format_total_item">%d items</string>
    <string name="details_transaction">Details Transaction</string>
    <string name="driver">Driver</string>
    <string name="tax">Tax</string>
    <string name="deliver_to_label">Deliver to:</string>
    <string name="name">Name</string>
    <string name="checkout_now">Checkout Now</string>
</resources>