<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_title_deliver_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/deliver_to_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_label_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@id/spc_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_deliver_to" />

    <TextView
        android:id="@+id/txt_label_phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/phone_no"
        app:layout_constraintEnd_toStartOf="@id/spc_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_label_name" />

    <TextView
        android:id="@+id/txt_label_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/address"
        app:layout_constraintEnd_toStartOf="@id/spc_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_label_phone_no" />

    <TextView
        android:id="@+id/txt_label_house_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/house_no"
        app:layout_constraintEnd_toStartOf="@id/spc_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_label_address" />

    <TextView
        android:id="@+id/txt_label_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/city"
        app:layout_constraintEnd_toStartOf="@id/spc_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_label_house_no" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_label_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spc_center"
        app:layout_constraintTop_toTopOf="@id/txt_label_name"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/txt_phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_label_phone_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spc_center"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_label_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spc_center"
        app:layout_constraintTop_toBottomOf="@id/txt_phone_no"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/txt_house_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_label_house_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spc_center"
        app:layout_constraintTop_toBottomOf="@id/txt_address"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/txt_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_label_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spc_center"
        app:layout_constraintTop_toBottomOf="@id/txt_house_no"
        tools:text="@tools:sample/lorem/random" />

    <Space
        android:id="@+id/spc_center"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gdl_center"
        app:layout_constraintStart_toStartOf="@id/gdl_center"
        app:layout_constraintTop_toTopOf="@id/txt_label_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
