<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/apb_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tlb_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitle="@string/orders_subtitle"
            app:title="@string/orders_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <Space
        android:id="@+id/spc_orders"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_toolbar_with_content_small"
        app:layout_constraintTop_toBottomOf="@id/apb_orders" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tbl_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/black"
        app:tabIndicatorFullWidth="false"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/TabTextStyle"
        app:tabTextColor="@color/grey_primary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpg_section"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbl_section" />

    <include
        android:id="@+id/lyt_order_empty"
        layout="@layout/layout_order_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grp_visible_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="spc_orders, apb_orders" />


</androidx.constraintlayout.widget.ConstraintLayout>